# truck-counting

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  mkdocs.yml  pyproject.toml
tests/: test_truck_counting.py
truck_counting/api/v1/: main.py
truck_counting/loaders/: __init__.py  model_loader.py
truck_counting/models/: __init__.py  truck_detector.py
